<?xml version="1.0" encoding="utf-8"?>
<!--
 Copyright 2017 Amazon.com, Inc. or its affiliates (Amazon). All Rights Reserved.

 Code generated by AWS Mobile Hub. Amazon gives unlimited permission to
 copy, distribute and modify it.

 Source code generated from template: aws-my-sample-app-android v0.14
--> 

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:layout_marginTop="@dimen/activity_vertical_margin"

    tools:context="com.quebec.app.demo.userpools.SignUpActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <TextView
            android:text="@string/signup_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:id="@+id/signup_photo_upload_title"
            android:textAppearance="@style/TextAppearance.FontPath"
            style="@style/SmallHeaderText" />

        <EditText
            android:id="@+id/signup_username"
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_text_height"
            android:layout_below="@id/signup_photo_upload_title"
            android:layout_centerHorizontal="true"
            android:hint="@string/username_text"
            android:inputType="textPersonName" />

        <Space
            android:id="@+id/signup_space2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_intra_group_separation"
            android:layout_below="@id/signup_username" />


        <EditText
            android:id="@+id/signup_email"
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_text_height"
            android:layout_below="@id/signup_username"
            android:layout_centerHorizontal="true"
            android:hint="@string/email_address_text"
            android:inputType="textEmailAddress" />

        <Space
            android:id="@+id/signup_space5"
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_intra_group_separation"
            android:layout_below="@id/signup_email" />

        <EditText
            android:id="@+id/signup_given_name"
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_text_height"
            android:hint="@string/given_name_text"
            android:inputType="textPersonName"
            android:layout_below="@+id/signup_space3"
            android:layout_alignParentStart="true" />

        <Space
            android:id="@+id/signup_space5"
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_intra_group_separation"
            android:layout_below="@id/signup_email" />

        <EditText
            android:id="@+id/signup_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_text_height"
            android:hint="@string/sign_in_password"
            android:inputType="textPassword"
            android:layout_below="@+id/signup_space2"
            android:layout_alignParentStart="true"
            android:textAppearance="@style/TextAppearance.FontPath" />

        <Space
            android:id="@+id/signup_space4"
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_intra_group_separation"
            android:layout_below="@+id/signup_given_name"
            android:layout_alignParentStart="true" />

        <TextView
            android:text="@string/signup_password_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView5" />

        <Button
            android:id="@+id/signup_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_button_height"
            android:onClick="signUp"
            android:text="@string/title_activity_sign_up"
            android:textAllCaps="false"
            android:textSize="@dimen/activity_button_text_size"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            style="@style/Widget.AppCompat.Button"
            android:elevation="0dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/signup_error"
            style="@style/ErrorMessage" />

    </LinearLayout>


</RelativeLayout>
