<?xml version="1.0" encoding="utf-8"?>
<!--
 Copyright 2017 Amazon.com, Inc. or its affiliates (Amazon). All Rights Reserved.

 Code generated by AWS Mobile Hub. Amazon gives unlimited permission to
 copy, distribute and modify it.

 Source code generated from template: aws-my-sample-app-android v0.14
--> 

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:layout_marginTop="@dimen/activity_vertical_margin"

    tools:context="com.quebec.app.demo.userpools.SignUpConfirmActivity">

    <TextView
        android:text="@string/confirm_account_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:id="@+id/confirm_account_title"
        android:textAppearance="@style/TextAppearance.FontPathHeading"
        style="@style/SmallHeaderText" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/confirm_account_title"
        android:id="@+id/confirm_account_space1" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/sign_up_confirm_code_sent"
        android:id="@+id/confirm_account_message1"
        android:layout_below="@id/confirm_account_space1"
        android:layout_centerHorizontal="true" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_intra_group_separation"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/confirm_account_message1"
        android:id="@+id/confirm_account_space2" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/sign_up_confirm_enter_code"
        android:id="@+id/confirm_account_message2"
        android:layout_below="@id/confirm_account_space2"
        android:layout_centerHorizontal="true" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_intra_group_separation"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/confirm_account_message2"
        android:id="@+id/confirm_account_space3" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_text_height"
        android:id="@+id/confirm_account_username"
        android:layout_below="@id/confirm_account_space3"
        android:layout_centerHorizontal="true"
        android:hint="@string/username_text"
        android:inputType="textPersonName"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_intra_group_separation"
        android:layout_below="@id/confirm_account_username"
        android:id="@+id/confirm_account_space4" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_text_height"
        android:id="@+id/confirm_account_confirmation_code"
        android:layout_below="@id/confirm_account_space4"
        android:layout_centerHorizontal="true"
        android:hint="@string/sign_up_confirm_code"
        android:inputType="number" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_intra_group_separation"
        android:layout_below="@id/confirm_account_confirmation_code"
        android:id="@+id/confirm_account_space5" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_button_height"
        android:text="@string/sign_up_confirm_text"
        android:textAllCaps="false"
        android:textSize="@dimen/activity_button_text_size"
        android:id="@+id/confirm_account_button"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/confirm_account_space5"
        android:onClick="confirmAccount"/>

</RelativeLayout>
