<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sign_up_photo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.quebec.SignUpPhotoActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <TextView
            android:text="@string/profile_train_photo_upload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:id="@+id/textView2" />

        <Button
            android:text="@string/profile_train_photo_upload_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="55dp"
            android:id="@+id/signup_upload_photo_button"
            android:layout_below="@+id/textView2"
            android:layout_alignParentStart="true"
            android:onClick="choosePhoto" />

        <Button
            android:text="@string/profile_train_photo_take_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:id="@+id/signup_take_photo_button"
            android:layout_below="@+id/signup_upload_photo_button"
            android:layout_alignParentStart="true"
            android:onClick="takePhoto" />
    </RelativeLayout>
</RelativeLayout>
