<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sign_up_photo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.quebec.app.ProfilePictureUpdateActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <TextView
            android:text="@string/signup_photo_upload_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:id="@+id/signup_photo_upload_title"
            android:textAppearance="@style/TextAppearance.FontPath"
            style="@style/SmallHeaderText" />

        <TextView
            android:text="@string/signup_photo_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/signup_photo_description" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:text="@string/profile_train_photo_upload_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:id="@+id/signup_upload_photo_button"
                android:onClick="choosePhoto"
                android:layout_below="@+id/signup_photo_upload_title"
                android:layout_alignParentStart="true"
                android:layout_weight="1" />

            <Button
                android:text="@string/profile_train_photo_take_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="17dp"
                android:id="@+id/signup_take_photo_button"
                android:onClick="takePhoto"
                android:layout_below="@+id/signup_upload_photo_button"
                android:layout_alignParentStart="true"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/signup_image_result"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginTop="@dimen/activity_separator_small"
            android:visibility="invisible">

            <ImageView
                app:srcCompat="@color/bb_darkBackgroundColor"
                android:id="@+id/signup_image_preview"
                android:layout_alignParentBottom="true"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center_horizontal" />

            <Button
                android:text="@string/signup_photo_confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/signup_photo_confirm"
                android:onClick="confirmPhoto"
                android:enabled="false"
                android:layout_marginTop="@dimen/activity_separation_small" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/signup_image_error" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"></LinearLayout>

</RelativeLayout>
